--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,6 @@
 
 # IDE - VSCode
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 
 # misc
 /.sass-cache
@@ -38,4 +34,4 @@ testem.log
 .DS_Store
 Thumbs.db
 rec.js
-cache/backup.json
+/cache
